--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.15.0",
     "express-handlebars": "^3.0.0",
     "express-session": "^1.13.0",
+    "formidable": "^1.0.17",
     "handlebars": "^4.0.5"
   }
 }
