--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
     "body-parser": "^1.15.0",
     "express-handlebars": "^3.0.0",
     "express-session": "^1.13.0",
-    "formidable": "^1.0.17",
     "handlebars": "^4.0.5",
     "passport": "^0.3.2",
-    "passport-facebook": "^2.1.0"
+    "passport-facebook": "^2.1.0",
+    "formidable": "^1.0.17",
+    "handlebars": "^4.0.5"
   }
 }
