--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express-session": "^1.13.0",
     "formidable": "^1.0.17",
     "handlebars": "^4.0.5",
+    "mysql": "^2.10.2",
     "passport": "^0.3.2",
     "passport-facebook": "^2.1.0",
     "passport-naver": "^1.0.4",
